--- a/05_Tuto_fsm/fsm.qsf
+++ b/05_Tuto_fsm/fsm.qsf
@@ -50,11 +50,9 @@ set_global_assignment -name DEVICE_FILTER_PIN_COUNT 256
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 8
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
-set_global_assignment -name VHDL_FILE traffic_light.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VHDL_FILE traffic_light_testbench.vhd
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
@@ -66,5 +64,9 @@ set_global_assignment -name EDA_TEST_BENCH_NAME traffic_light_testbench -section
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id traffic_light_testbench
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME traffic_light_testbench -section_id traffic_light_testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE traffic_light_testbench.vhd -section_id traffic_light_testbench
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE Vending_Machine_Controller.vhd
+set_global_assignment -name VHDL_FILE Elevator_Controller.vhd
+set_global_assignment -name VHDL_FILE traffic_light.vhd
+set_global_assignment -name VHDL_FILE traffic_light_testbench.vhd
 set_global_assignment -name VHDL_FILE traffic_light_pedes.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
